--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ body {
   background: var(--mainWhite);
   font-family: "Lato", sans-serif;
 }
-
 /* --------------- Navbar ---------------- */
 .navbar {
   position: sticky;
@@ -58,7 +57,7 @@ body {
 /* --------------- End of Navbar ---------------- */
 /* --------------- Hero ---------------- */
 .hero {
-  min-height: calc(100vh - 60px);/*60px of navbar*/
+  min-height: calc(100vh - 60px);
   background: url("./images/hero-bcg.jpeg") center/cover no-repeat;
   display: flex;
   align-items: center;
@@ -164,6 +163,7 @@ body {
   color: var(--primaryColor);
   text-align: center;
 }
+
 /* ---------------End of Products ---------------- */
 /* --------------- Cart ---------------- */
 .cart-overlay {
